WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108539
Assert that computePreferredLogicalWidths never calls setNeedsLayout
https://bugs.webkit.org/show_bug.cgi?id=108539
Summary
Assert that computePreferredLogicalWidths never calls setNeedsLayout
Ojan Vafai
Reported
2013-01-31 15:13:03 PST
Assert that computePreferredLogicalWidths never calls setNeedsLayout
Attachments
Patch
(8.63 KB, patch)
2013-01-31 15:13 PST
,
Ojan Vafai
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ojan Vafai
Comment 1
2013-01-31 15:13:56 PST
Created
attachment 185876
[details]
Patch
Tony Chang
Comment 2
2013-01-31 16:20:48 PST
Comment on
attachment 185876
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=185876&action=review
> Source/WebCore/ChangeLog:11 > + This is take 2 after this was rolled out because it was missing the guards > + in RenderCounter/RenderQuote.
What happened to the original bug? Should this patch be attached there?
Ojan Vafai
Comment 3
2013-01-31 16:37:46 PST
(In reply to
comment #2
)
> What happened to the original bug? Should this patch be attached there?
I guess so in retrospect since that got rolled out. I'll put a link to this bug in that one.
WebKit Review Bot
Comment 4
2013-01-31 17:49:53 PST
Comment on
attachment 185876
[details]
Patch Clearing flags on attachment: 185876 Committed
r141517
: <
http://trac.webkit.org/changeset/141517
>
WebKit Review Bot
Comment 5
2013-01-31 17:49:57 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug